# task-tracker

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
include/task-tracker/: task.h  task_manager.h  ui.h
src/: CMakeLists.txt  main.cpp  task.cpp  task_manager.cpp  ui.cpp
tests/: CMakeLists.txt  manager.cpp  task.cpp  task_tests.cpp  ui.cpp
